--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ psycopg2-binary = "*"
 dj-database-url = "*"
 whitenoise = "*"
 python-decouple = "*"
+django-extensions = "*"
 
 [requires]
 python_version = "3.6"
